--- a/sonetos-lope-plantilla/style.css
+++ b/sonetos-lope-plantilla/style.css
@@ -4,11 +4,12 @@ body {
     background-image: url(fondos/corazon-2.svg), url(fondos/corazon-1.svg); 
     background-repeat: repeat-y, repeat-y;
     background-position: right, left;
-    background-size: 10%;
+    background-size: 150px;
 }
 
 main {
     font-size: 20px;
+    margin: 10px 150px;
 }
 h1 {
     text-align: center;
@@ -28,9 +29,6 @@ pre {
     background-image: url(fondos/manchas.png);
     font-weight: bold;
     border: 2px solid black;
-    margin-left: 150px;
-    margin-right: 150px;
-    margin-bottom: 1px;
     padding-bottom: 20px;
     background-position: center;
 }
@@ -39,11 +37,8 @@ pre {
     background: url(/sonetos-lope-plantilla/fondos/fuego.svg) no-repeat bottom right, url(/sonetos-lope-plantilla/fondos/fuego.svg) no-repeat bottom left, url(fondos/tallos.jpg);
     font-weight: bold;
     border: 2px solid black;
-    margin-left: 150px;
-    margin-right: 150px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-top: 1px
 }
 
 .third-eye {
@@ -51,8 +46,6 @@ pre {
     background:url(/sonetos-lope-plantilla/fondos/ojo.svg) no-repeat center, url(fondos/hexagonos.jpg); 
     font-weight: bold;
     border: 2px solid black;
-    margin-left: 150px;
-    margin-right: 150px;
     padding-top: 10px;
     padding-bottom: 10px;
     z-index: 3;
@@ -65,8 +58,6 @@ pre {
     background-size: 100px, auto;
     font-weight: bold;
     border: 2px solid black;
-    margin-left: 150px;
-    margin-right: 150px
     
 }
 
