--- a/chesterton-1-plantilla/style.css
+++ b/chesterton-1-plantilla/style.css
@@ -1,3 +1,14 @@
+body {
+    font-size: 30px ;
+    font-family: sans-serif;
+}
+
+header {
+    text-align: justify;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 h1 {
     text-align: center;
 }
