--- a/software-libre-3-plantilla/style.css
+++ b/software-libre-3-plantilla/style.css
@@ -35,7 +35,7 @@ div {
     
 }
 
-.subtitle_background {
+h2 {
     color: white;
     background-color: #408E91;
     margin-bottom: 0;
@@ -43,9 +43,13 @@ div {
     border-radius: 0.4vw 0.4vw 0vw 0vw;
 }
 
-.margin-top {
+p {
     margin-top: 0;
     background-color: white;
     padding: 0.4vw;
     border-radius: 0vw 0vw 0.4vw 0.4vw;
+}
+
+a {
+    color:white
 }
